# atomic-brain

./: .gitignore  CLAUDE.md  pyproject.toml
.lancedb/concepts.lance/_transactions/: 0-ed927a09-8954-4908-a0bc-15cfb59c731e.txn  1-efe81c69-a546-4789-8db3-398d41683e1a.txn  2-5b775aa3-eb59-44fd-94c6-3a323603299e.txn
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-foundation-ingestion/: 01-CONTEXT.md  01-SUMMARY.md  PLAN.md
.planning/phases/02-indexing-search/: 02-CONTEXT.md  02-SUMMARY.md  PLAN.md
.planning/phases/03-autonomous-organization/: 03-CONTEXT.md  03-SUMMARY.md  PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
graphify-out/: .graphify_chunk_03.json  .graphify_chunk_04.json  .graphify_chunk_05.json  .graphify_chunk_06.json  .graphify_chunk_07.json  .graphify_chunk_08.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
src/: __init__.py  cli.py  database.py  embeddings.py  indexer.py  mcp_server.py  models.py  searcher.py  vault_manager.py
src/agents/: models.py  organization.py  refinement.py
src/api/: main.py  models.py
src/converters/: docling_wrapper.py  markitdown_wrapper.py  orchestrator.py
tests/: test_cli.py  test_converters.py  test_database.py  test_embeddings.py  test_indexer.py  test_models.py  test_searcher.py  test_vault_manager.py
ui/: package-lock.json  package.json
ui/src/: App.css  App.tsx
vault/Concepts/: README.md
(+7 files in other folders)
